# find-the-fish-bot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/felixbot/: __main__.py  configuration.py
src/felixbot/app/bot/: bot.py
src/felixbot/app/bot/handlers/: __init__.py  game.py  user.py
src/felixbot/app/bot/keyboards/: inline.py
src/felixbot/app/bot/middlewares/: i18n.py  session.py
src/felixbot/app/i18n/: __init__.py  loader.py
src/felixbot/app/i18n/locales/en/LC_MESSAGES/: txt.ftl
src/felixbot/app/i18n/locales/ru/LC_MESSAGES/: txt.ftl
src/felixbot/app/infrastructure/db/: __init__.py  engine.py  models.py  repo.py
src/felixbot/app/infrastructure/redis/: __init__.py  repo.py
src/felixbot/migrations/: env.py
src/felixbot/migrations/versions/: 5611774cf966_init.py
