[project]
name = "felixbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andrei Kholodov", email = "andrejholod77@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.26.0",
    "alembic>=1.18.4",
    "fluentogram>=1.2.1",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "redis>=7.3.0",
    "sqlalchemy>=2.0.48",
]

[project.scripts]
felixbot = "felixbot:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]

[tool.ruff]
exclude = [
    "src/felixbot/migrations",
]
